try to build rootfs

--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -32,7 +32,8 @@ jobs:
         sudo apt-get install -y \
           build-essential libncurses-dev libssl-dev bc flex bison \
           gcc-aarch64-linux-gnu dpkg-dev kmod cpio rsync u-boot-tools \
-          debhelper libelf-dev libssl-dev
+          debhelper libelf-dev libssl-dev coreutils \
+          android-sdk-libsparse-utils
       # 安装编译依赖项 [5,6](@ref)
 
     # 2-1. 获取本项目源码
@@ -63,13 +64,7 @@ jobs:
             ;;
         esac
         git apply $GITHUB_WORKSPACE/workspace/patch/ufi.patch
-
-    - name: SSH connection to Actions
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}    
+ 
       # 配置流程参考 [4,6](@ref)
 
     # 4. 编译内核与生成DEB包
@@ -90,6 +85,33 @@ jobs:
         mkdir -p $GITHUB_WORKSPACE/artifacts/
         cat arch/arm64/boot/Image.gz arch/arm64/boot/dts/qcom/msm8916-thwc-ufi001c.dtb > $GITHUB_WORKSPACE/artifacts/kernel-dtb
         mv ../linux-*.deb ../artifacts/
+
+    - name: Build Rootfs
+      run: |
+        sudo dd if=/dev/zero of=root.img bs=1M count=1536
+        sudo mkfs.btrfs --metadata single --data single --label "rootfs" -U a7ab80e8-e9d1-e8cd-f157-93f69b1d141e root.img
+        mkdir -p rootfs
+        sudo mount -o compress=zstd,defaults,noatime,space_cache=v2,nodatacow root.img rootfs/
+        sudo tar --numeric-owner -xvpzf $GITHUB_WORKSPACE/workspace/rootfs/debian13.tar.gz -C rootfs
+        sudo mount --bind /proc rootfs/proc 
+        sudo mount --bind /dev rootfs/dev 
+        sudo mount --bind /dev/pts rootfs/dev/pts 
+        sudo mount --bind /sys rootfs/sys
+        sudo cp $GITHUB_WORKSPACE/artifacts/*.deb rootfs/root/
+        sudo rm rootfs/root/*gdb*.deb
+        sudo chroot rootfs /usr/bin/dpkg install /root/*.deb
+        sudo chroot rootfs /usr/sbin/dpkg-reconfigure openssh-server
+        sudo umount rootfs/proc
+        sudo umount rootfs/dev/pts
+        sudo umount rootfs/dev
+        sudo umount rootfs/sys
+    
+    - name: SSH connection to Actions
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}   
 
     # 5. 上传制品
     - name: Upload Artifacts
