--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -40,6 +40,7 @@ jobs:
     - name: Checkout Workflow Repo
       uses: actions/checkout@v4
       with:
+        lfs: true
         path: workspace
 
     # 2-2. 获取内核源码
@@ -65,7 +66,13 @@ jobs:
         esac
         git apply $GITHUB_WORKSPACE/workspace/patch/ufi.patch
  
-      # 配置流程参考 [4,6](@ref)
+    # 3-1. 创建SSH连接
+    - name: SSH connection to Actions
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}  
 
     # 4. 编译内核与生成DEB包
     - name: Build Kernel & DEB Packages
@@ -86,19 +93,14 @@ jobs:
         cat arch/arm64/boot/Image.gz arch/arm64/boot/dts/qcom/msm8916-thwc-ufi001c.dtb > $GITHUB_WORKSPACE/artifacts/kernel-dtb
         mv ../linux-*.deb ../artifacts/
 
+    # 5. 生成root.img,格式化为btrfs格式
     - name: Build Rootfs
       run: |
         sudo dd if=/dev/zero of=root.img bs=1M count=1536
         sudo mkfs.btrfs --metadata single --data single --label "rootfs" -U a7ab80e8-e9d1-e8cd-f157-93f69b1d141e root.img
-        mkdir -p rootfs
+        mkdir -p rootfs 
 
-    - name: SSH connection to Actions
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}   
-
+    # 6. 挂载rootfs并释放文件
     - name: Mount Rootfs
       run: |
         sudo mount -o compress=zstd,defaults,noatime,space_cache=v2,nodatacow root.img rootfs/
@@ -108,15 +110,36 @@ jobs:
         sudo mount --bind /dev/pts rootfs/dev/pts 
         sudo mount --bind /sys rootfs/sys
         sudo cp $GITHUB_WORKSPACE/artifacts/*.deb rootfs/root/
-        sudo rm rootfs/root/*gdb*.deb
+        sudo rm rootfs/root/*dbg*.deb
         sudo chroot rootfs /usr/bin/dpkg install /root/*.deb
         sudo chroot rootfs /usr/sbin/dpkg-reconfigure openssh-server
         sudo umount rootfs/proc
         sudo umount rootfs/dev/pts
         sudo umount rootfs/dev
         sudo umount rootfs/sys
-    
-    # 5. 上传制品
+  
+    # 7. 生成boot.img
+    - name: Build Boot img
+      run: |
+        mkbootimg \
+          --base 0x80000000 \
+          --kernel_offset 0x00080000 \
+          --ramdisk_offset 0x02000000 \
+          --tags_offset 0x01e00000 \
+          --pagesize 2048 \
+          --second_offset 0x00f00000 \
+          --ramdisk rootfs/boot/initrd.img-* \
+          --cmdline "earlycon root=PARTUUID=a7ab80e8-e9d1-e8cd-f157-93f69b1d141e rootflags=compress=zstd,defaults,noatime,discard=async,autodefrag,nodatacow,noatime,space_cache=v2,recovery console=ttyMSM0,115200 no_framebuffer=true rw" \
+          --kernel $GITHUB_WORKSPACE/artifacts/kernel-dtb \
+          -o $GITHUB_WORKSPACE/artifacts/boot.img
+
+    # 8. 打包roofs.img
+    - name: Package Rootfs
+      run: |
+        umount rootfs
+        img2simg root.img $GITHUB_WORKSPACE/artifacts/rootfs.img
+
+    # 9. 上传制品
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
