--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -65,14 +65,6 @@ jobs:
             ;;
         esac
         git apply $GITHUB_WORKSPACE/workspace/patch/ufi.patch
- 
-    # 3-1. 创建SSH连接
-    - name: SSH connection to Actions
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}  
 
     # 4. 编译内核与生成DEB包
     - name: Build Kernel & DEB Packages
@@ -110,17 +102,25 @@ jobs:
         sudo mount --bind /dev/pts rootfs/dev/pts 
         sudo mount --bind /sys rootfs/sys
         sudo cp $GITHUB_WORKSPACE/artifacts/*.deb rootfs/root/
+
+    - name: SSH connection to Actions
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}  
+
+  
+    # 7. 生成boot.img
+    - name: Build Boot img
+      run: |
         sudo rm rootfs/root/*dbg*.deb
-        sudo chroot rootfs /usr/bin/dpkg install /root/*.deb
+        sudo chroot rootfs /usr/bin/dpkg -i /root/*.deb
         sudo chroot rootfs /usr/sbin/dpkg-reconfigure openssh-server
         sudo umount rootfs/proc
         sudo umount rootfs/dev/pts
         sudo umount rootfs/dev
         sudo umount rootfs/sys
-  
-    # 7. 生成boot.img
-    - name: Build Boot img
-      run: |
         mkbootimg \
           --base 0x80000000 \
           --kernel_offset 0x00080000 \
