--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -33,7 +33,7 @@ jobs:
           build-essential libncurses-dev libssl-dev bc flex bison \
           gcc-aarch64-linux-gnu dpkg-dev kmod cpio rsync u-boot-tools \
           debhelper libelf-dev libssl-dev coreutils \
-          android-sdk-libsparse-utils
+          android-sdk-libsparse-utils android-tools-mkbootimg
       # 安装编译依赖项 [5,6](@ref)
 
     # 2-1. 获取本项目源码
@@ -114,9 +114,9 @@ jobs:
     # 7. 生成boot.img
     - name: Build Boot img
       run: |
-        sudo rm -f rootfs/root/*dbg*
+        sudo chroot rootfs /bin/bash -c "rm -f /root/*dbg*""
         sudo chroot rootfs /bin/bash -c "dpkg -i /root/*.deb"
-        sudo rm -f rootfs/root/*.deb
+        sudo chroot rootfs /bin/bash -c "rm -f /root/*.deb"
         sudo chroot rootfs /bin/bash -c "dpkg-reconfigure openssh-server"
         sudo umount rootfs/proc
         sudo umount rootfs/dev/pts
