--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -33,7 +33,7 @@ jobs:
           build-essential libncurses-dev libssl-dev bc flex bison \
           gcc-aarch64-linux-gnu dpkg-dev kmod cpio rsync u-boot-tools \
           debhelper libelf-dev libssl-dev coreutils \
-          android-sdk-libsparse-utils android-tools-mkbootimg
+          android-sdk-libsparse-utils mkbootimg
       # 安装编译依赖项 [5,6](@ref)
 
     # 2-1. 获取本项目源码
