fix mkbootimg url

--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -34,7 +34,7 @@ jobs:
           gcc-aarch64-linux-gnu dpkg-dev kmod cpio rsync u-boot-tools \
           debhelper libelf-dev libssl-dev coreutils \
           android-sdk-libsparse-utils wget
-          wget http://ftp.debian.org/debian/pool/main/a/android-platform-tools/android-tools-mkbootimg_34.0.5-3_arm64.deb
+          wget http://ftp.debian.org/debian/pool/main/a/android-platform-tools/mkbootimg_34.0.5-12_all.deb
           sudo dpkg -i android-tools-mkbootimg_34.0.5-3_arm64.deb
       # 安装编译依赖项 [5,6](@ref)
 
