--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -46,9 +46,9 @@ jobs:
           build-essential libncurses-dev libssl-dev bc flex bison \
           gcc-aarch64-linux-gnu dpkg-dev kmod cpio rsync u-boot-tools \
           debhelper libelf-dev libssl-dev coreutils \
-          android-sdk-libsparse-utils wget mkbootimg
-          wget http://ftp.debian.org/debian/pool/main/a/android-platform-system-core/android-tools-mkbootimg_10.0.0+r36-7_all.deb
-          sudo dpkg -i android-tools-mkbootimg_10.0.0+r36-7_all.deb
+          android-sdk-libsparse-utils wget
+          wget http://ftp.debian.org/debian/pool/main/a/android-platform-tools/mkbootimg_34.0.5-12_all.deb
+          sudo dpkg -i mkbootimg_34.0.5-12_all.deb
       # 安装编译依赖项 [5,6](@ref)
 
     # 2-1. 获取本项目源码
