--- a/.config
+++ b/.config
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-qpzm1258"
+CONFIG_LOCALVERSION="-msm8916"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
