--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -32,7 +32,7 @@ on:
         default: '-openstick'
 
 jobs:
-  build_kernel:
+  build_debian:
     runs-on: ubuntu-24.04-arm
     env:
       ARCH: arm64
