--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -147,6 +147,8 @@ jobs:
         sudo chroot rootfs /bin/bash -c "dpkg -i /root/*.deb"
         sudo chroot rootfs /bin/bash -c "rm -f /root/*.deb"
         sudo chroot rootfs /bin/bash -c "dpkg-reconfigure openssh-server"
+        sudo cp /etc/resolv.conf rootfs/etc/resolv.conf
+        sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y && apt autoclean && rm -f /etc/resolv.conf"
         export PYTHONPATH=/usr/share/android-tools/mkbootimg
         INITRD=$(sudo ls -t rootfs/boot/initrd.img-* 2>/dev/null | head -n1 || true)
         if [ -z "$INITRD" ]; then
