--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -126,7 +126,8 @@ jobs:
         sudo dd if=/dev/zero of=root.img bs=1M count=1536
         sudo mkfs.btrfs -O free-space-tree --metadata single --data single --label "rootfs" -U a7ab80e8-e9d1-e8cd-f157-93f69b1d141e root.img
         mkdir -p rootfs 
-        sudo mount -o compress=zstd,defaults,noatime,space_cache=v2,nodatacow root.img rootfs/
+        mkdir -p img
+        sudo mount -o compress=zstd,defaults,noatime,space_cache=v2,nodatacow root.img img/
         sudo tar --numeric-owner -xvpzf $GITHUB_WORKSPACE/workspace/rootfs/${{ inputs.debian_version }}.tar.gz -C rootfs
         sudo mount --bind /proc rootfs/proc 
         sudo mount --bind /dev rootfs/dev 
@@ -180,7 +181,8 @@ jobs:
         sudo umount rootfs/dev/pts
         sudo umount rootfs/dev
         sudo umount rootfs/sys
-        sudo umount rootfs
+        sudo rsync -axv rootfs/* img
+        sudo umount img
         img2simg root.img $GITHUB_WORKSPACE/rootfs.img
         echo "status=success" >>$GITHUB_OUTPUT
 
