--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -153,12 +153,12 @@ jobs:
         sudo chroot rootfs /bin/bash -c "rm -f /root/*.deb"
         sudo chroot rootfs /bin/bash -c "dpkg-reconfigure openssh-server"
         sudo cp /etc/resolv.conf rootfs/etc/resolv.conf
-        sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y && apt autoclean"
+        sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y --no-install-recommends -o Dpkg::Options::='--force-confdef' && apt autoclean"
         if [ "${{ inputs.debian_version }}" = "trixie" ]; then
           sudo sed -i 's/bookworm/trixie/g' rootfs/etc/apt/sources.list
           sudo sed -i 's/bookworm/trixie/g' rootfs/etc/apt/sources.list.d/mobian.list
           echo "⬆️ 升级到 Debian 13 (Trixie)..."
-          sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y && apt clean"
+          sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y --no-install-recommends -o Dpkg::Options::='--force-confdef' && apt autoclean"
         fi
         sudo chroot rootfs /bin/bash -c "rm -f /etc/resolv.conf"
         sudo chroot rootfs /bin/bash -c "cat /dev/null > /root/.bash_history"
